Added icon, fixed hover

--- a/public/index.html
+++ b/public/index.html
@@ -336,7 +336,7 @@
         ></a>
         
         <a href="https://leetcode.com/yanshrey/" target="_blank"
-          ><i class="facebook"></i
+          ><i class="icon-leetcode-line"></i
         ></a>
         
         <a href="https://www.hackerrank.com/shreyanshsaha" target="_blank"
