--- a/public/404.html
+++ b/public/404.html
@@ -291,7 +291,7 @@
   <div class="container">
     <div class="footer__left">
       <div class="footer__copy">
-        © Raditian. All rights reserved.
+        © All rights reserved.
       </div>
     </div>
     <div class="footer__links">
@@ -318,14 +318,7 @@
         
       </ul>
     </div>
-    <div class="footer__right">
-      <a href="https://radity.com/"
-        ><img
-          src="https://shreyanshsaha.com/img/general/design-and-code-radity.png"
-          srcset="https://shreyanshsaha.com/img/general/design-and-code-radity.png 1x, https://shreyanshsaha.com/img/general/design-and-code-radity@2x.png 2x"
-          alt="Design &amp; Code - Radity"
-      /></a>
-    </div>
+    
   </div>
 </footer>
  <script src='https://shreyanshsaha.com/js/rad-animations.js'></script>
