--- a/public/index.html
+++ b/public/index.html
@@ -608,7 +608,7 @@
   <div class="container">
     <div class="footer__left">
       <div class="footer__copy">
-        © Raditian. All rights reserved.
+        © All rights reserved.
       </div>
     </div>
     <div class="footer__links">
@@ -635,14 +635,7 @@
         
       </ul>
     </div>
-    <div class="footer__right">
-      <a href="https://radity.com/"
-        ><img
-          src="https://shreyanshsaha.com/img/general/design-and-code-radity.png"
-          srcset="https://shreyanshsaha.com/img/general/design-and-code-radity.png 1x, https://shreyanshsaha.com/img/general/design-and-code-radity@2x.png 2x"
-          alt="Design &amp; Code - Radity"
-      /></a>
-    </div>
+    
   </div>
 </footer>
 
